# ControlNet

./: .gitignore  README.md  run_eval.sh  show_results.py
configs/: map_prior.yaml
env/: __init__.py  longitudinal_env.py
evaluation/: __init__.py  cpp_onnx_policy.py  eval_closed_loop.py  eval_offline.py  inference.py  pid_controller.py  plotting.py  policy_loader.py
evaluation/cpp_inference/: CMakeLists.txt  __init__.py  onnx_policy.cpp  onnx_policy.h  pybind_module.cpp
examples/cpp_inference/: CMakeLists.txt  README.md  main.cpp
fitting/: __init__.py  gui_fitting.py  randomization_config.py  vehicle_fitter.py
generator/: __init__.py  adapter.py  feasibility.py  generator.py  lpf.py  samplers.py
generator/tests/: __init__.py  test_feasibility.py  test_generator.py  test_lpf.py
scripts/: README_presentation.md  analyze_guidance_results.py  analyze_pixelation.py  build_segment_metadata.py  compare_gt_maps.py  compare_guidance_scale.py  compare_schedulers.py  compare_wmin.py  create_presentation.py  debug_artifacts.py  debug_guidance.py  debug_guidance_phase1.py  debug_sampling.py  demo_creep_behavior.py  eval_sysid.py  evaluate_diffusion.py  export_onnx.py  fit_vehicle_params.py  generate_gt_maps.py  generate_synthetic_dataset.py  interactive_filter_visualizer.py  launch_fitting_gui.py  parse_trips.py  plot_violent_profile_example.py  pretrain_sysid.py  quick_ddpm_test.py  reward_weight_tuner.py  simulate_online_reconstruction.py  test_exact_offline_match.py  test_guidance_debug.py  test_phase1_simple.py  test_schedulers.py  train_diffusion_prior.py  train_map_encoder.py  tune_objective_weights.py
speed_shaper/: BOX_CONSTRAINTS_IMPLEMENTATION.md  GUI_UPDATES.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_FIX.md  LQR_PENALTY_MODE_IMPLEMENTATION.md  LQR_QUICKSTART.md  NEGATIVE_LAMBDA.md  README.md  examples.py  requirements.txt  verify_all.sh
speed_shaper/configs/: README.md  comfort_driving.json  example_smooth_driving.json  integration_test.json
speed_shaper/src/: __init__.py  config_schema.py  gui_matplotlib.py  gui_matplotlib.py.backup  shaper_math.py
speed_shaper/tests/: test_acceptance.py  test_box_constraints.py  test_config_schema.py  test_constraints.py  test_kkt_solution.py
src/: __init__.py
src/data/: __init__.py  datasets.py  parsing.py
src/maps/: __init__.py  buffer.py  context_manager.py  encoder.py  energy.py  gravity.py  grid.py  sampler_diffusion.py  warmstart.py
src/models/: __init__.py  diffusion_prior.py
src/sysid/: __init__.py  dataset.py  encoder.py  integration.py  normalization.py  predictor.py  sysid_trainer.py
tests/: test_buffer_decay.py  test_data.py  test_dynamics.py  test_energy_grad.py  test_env.py  test_evaluation.py  test_fitting.py  test_gravity.py  test_grid.py  test_gt_map_generator.py  test_lqr_penalty_mode.py  test_oscillation_overshoot_penalties.py  test_pid_controller.py  test_training.py
tests/sysid/: __init__.py  test_actor_critic_conditioning.py  test_dataset.py  test_encoder.py  test_normalization.py  test_predictor.py
training/: NAN_FIX_SUMMARY.md  QUICK_FIX_REFERENCE.md  __init__.py  config.yaml  config_dynamics_map.yaml  config_niro_fitted_10pct.yaml  config_sac_pretrained.yaml  config_sac_pretrained_violent.yaml  config_sac_with_initial_error.yaml  config_sysid.yaml  train_sac.py  training_animation.py
training/diffusion_prior/: config.yaml  norm_stats.json
training/map_encoder/: norm_stats.json
utils/: __init__.py  clearml_logger.py  data_utils.py  dynamics.py
